# Big-Data

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
core/queries/airflow_queries/postgres/: example.sql
core/templates/airflow/dags/: example_basic.py  example_mongodb.py  example_postgres.py  load_yaml_defined_dags.py
core/tools/dagfactory/: dag_factory.py  helpers.py  task_factory.py
data/: init.sql  mongo-init.js
project/data/: mongo-init.js
project/templates/airflow/: prueba.py
project/templates/airflow/dags/: example_dbt.py  example_postgres.py  load_yaml_defined_dags.py
project/templates/airflow/dags/yaml_defined_dags/: exmaple_yaml_defined_dag.yaml
project/templates/airflow/logs/scheduler/: latest
project/templates/dbt/: profiles.yml
project/tools/dagfactory/: dag_factory.py  helpers.py  task_factory.py
project/tools/utils/: helpers.py
src/airflow/dags/: example.py  example_basic.py  example_dbt.py  example_mongodb.py  example_postgres.py
src/airflow/dags/source/dynamic_dags/: dag_generator.py  dagfactory.py  utils.py
src/airflow/dags/utils/: helpers.py
src/airflow/dags/yaml_defined_dags/: example.yaml  example_basic_postgres.yaml
src/dbt/: .user.yml  dbt_project.yml  profiles.yml
src/dbt/models/example/: my_first_dbt_model.sql
src/dbt/seeds/: country_codes.csv
src/src/: example.py
tests/dagfactory_tests/: test_dagfactory.py  test_helpers.py
tests/unit/airflow/dag_factory/: test_dag_factory_utils.py
tests/unit/general/: example_test.py
(+2 files in other folders)
